add invisible hit counter

--- a/artists/luke-dash/index.html
+++ b/artists/luke-dash/index.html
@@ -63,6 +63,7 @@ Even when a system of limited parts operates under the rules of a closed design,
 Goldsmiths Computational Arts 2019
 <div id="footer-location"><a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" target="_blank">St. James Hatcham Church, London SE14 6AD</a></div>
 </div>
+<div style="display:none;"><img src="http://simplehitcounter.com/hit.php?uid=0&f=16777215&b=0" border="0" height="18" width="83" alt="web counter"></div>
 
         <pre id = "face-1">
                                                                                                     
