added more bios

--- a/artists/julia-creuheras/index.html
+++ b/artists/julia-creuheras/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="Goldsmiths Computational Arts 2019" />
     <meta name="author" content="" />
-	<title>Keita Ikeda - So, How Is That Working For You?</title>
+	<title>Julia Creuheras - So, How Is That Working For You?</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/page.js"></script>
     
@@ -46,21 +46,22 @@ if (!doNotTrack) {
 <ul id = "artist-info">
     <li>
         <div id="artist-details">
-            <p class ="section" >Keita Ikeda</p>
-            <p class ="section">
-                <a href="https://instagram.com/_pondda" target="_blank">@_pondda</a><br>
-            </p>
+            <p class ="section" >Julia Creuheras</p>
             <p class ="section"></p>
+            <p class ="section">
+                <a href="/about/#about-thread-grid"><span class = matter>MATTER</a></span><br>
+            
+                <a href="/about/#about-thread-grid"><span class = narration>NARRATION</a></span><br>
+            </p>
             <p class = "section">
-                <a href = "/map/?highlight=keita-ikeda">GO TO MAP >></a>
+                <a href = "/map/?highlight=julia-creuheras">GO TO MAP >></a>
             </p>
         </div>
     </li>
     <li>
         <div id="artist-content">
             <br/>
-            <p><p>Keita Ikeda is a creative technologist working with light, physical materials and computer programming to explore visual perception, form and materiality. He seeks to design alternative mediums of artistic expression, and finds beauty not only in the content of a work, but in the very process of information materialising through a medium. He sees computation as a fundamental element in his practice, not merely as a tool but a material in its own right, like paint for a painter.</p>
-</p>
+            <p></p>
         </div>
     </li>
 </ul>
